--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -67,7 +67,7 @@ ion-card-header {
   background-color: transparent; /* Fondo transparente */
   border: none; /* Sin borde */
   padding: 0; /* Sin espaciado interno */
-  color: #020092; /* Color azul para el icono */
+  color: #245eda; /* Color azul para el icono */
   font-size: 1.2em; /* Aumenta el tamaño del icono de logout */
   outline: none; /* Sin contorno al hacer clic */
   --box-shadow: none; /* Elimina la sombra del botón */
