--- a/src/app/pages/incidences/incidences.page.html
+++ b/src/app/pages/incidences/incidences.page.html
@@ -44,6 +44,10 @@
           <ion-icon name="calendar" slot="start"></ion-icon>
           <span>{{ incidence.createdAt }}</span>
         </div>
+        <div class="type-info">
+          <ion-icon name="bookmarks" slot="start"></ion-icon>
+          <span>{{ incidence.incidenceType }}</span>
+        </div>
       </ion-card-content>
     </div>
   
