--- a/src/app/pages/incidences/incidences.page.scss
+++ b/src/app/pages/incidences/incidences.page.scss
@@ -47,6 +47,13 @@
   align-items: center;
   }
 
+  .type-info {
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+  }
+
+
   .button-container {
   display: flex;
   flex-direction: row;
